@@ -6,6 +6,8 @@ Knot Resolver 1.2.0 (2016-12-yy)
 - Support CD flag on incoming requests.
 - It now requires knot >= 2.3.1 to link successfully.
 - The API+ABI for modules changed slightly.
+- hints module: previously /etc/hosts was loaded by default, but not anymore.
+  Users can now actually avoid loading any file.
 
 Knot Resolver 1.1.1 (2016-08-24)
 ================================
